--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<title>Digital Clock</title>
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 <body>
 	<div class="myClock">
@@ -20,5 +21,6 @@
 	<footer>
 		&copy; 2018 By Anna Kowalak
 	</footer>
+	<script src="assets/js/main.js" type="text/javascript"></script>
 </body>
 </html>
