adding fonts to html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 	<title>Digital Clock</title>
-	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/segment7" type="text/css" />
+	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/futura-renner" type="text/css">
 </head>
 <body>
 	<div class="myClock">
