--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 	<footer>
-		&copy; 2018 By Anna Kowalak
+		&copy; 2018 
 	</footer>
 	<script src="assets/js/main.js" type="text/javascript"></script>
 </body>
